--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.14.1"
+    "mongodb": "^6.14.1",
+    "mongoose": "^8.12.1"
   }
 }
