--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/locphp/Dolciluxe#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.1",
     "mongoose": "^8.12.1"
   }
