--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.2.6",
     "util-deprecate": "^1.0.2"
   },
   "devDependencies": {
@@ -49,7 +50,7 @@
     "react-router-dom": "^6.26.2",
     "sass": "^1.79.4",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8",
+    "vite": "^5.4.17",
     "vite-plugin-babel": "^1.2.0"
   }
 }
