--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,18 +24,23 @@
   },
   "homepage": "https://github.com/locphp/Dolciluxe#readme",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.12.1",
-    "nodemailer": "^6.10.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "bcryptjs": "3.0.2",
+    "cookie-parser": "1.4.7",
+    "cors": "2.8.5",
+    "crypto": "1.0.1",
+    "dotenv": "16.4.7",
+    "express": "4.21.2",
+    "express-session": "1.18.1",
+    "jsonwebtoken": "9.0.2",
+    "moment": "2.30.1",
+    "mongodb": "6.14.1",
+    "mongoose": "8.12.1",
+    "nodemailer": "6.10.0",
+    "passport": "0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "qs": "6.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.9"
   }
 }
