--- a/backend/package.json
+++ b/backend/package.json
@@ -37,8 +37,7 @@
     "mongoose": "8.12.1",
     "nodemailer": "6.10.0",
     "passport": "0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "qs": "6.14.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "3.1.9"
