--- a/backend/package.json
+++ b/backend/package.json
@@ -26,14 +26,14 @@
   "dependencies": {
     "bcryptjs": "3.0.2",
     "cookie-parser": "1.4.7",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
     "crypto": "1.0.1",
-    "dotenv": "16.4.7",
-    "express": "4.21.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "express-session": "1.18.1",
     "jsonwebtoken": "9.0.2",
     "moment": "2.30.1",
-    "mongodb": "6.14.1",
+    "mongodb": "^6.16.0",
     "mongoose": "8.12.1",
     "nodemailer": "6.10.0",
     "passport": "0.7.0",
