--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+      - name: Ensure lock file exists
+        run: |
+          cd backend
+          if [ ! -f "package-lock.json" ]; then
+            npm install --package-lock-only
+          fi
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
