--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "util-deprecate": "^1.0.2"
   },
   "devDependencies": {
