--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.7",
     "@ant-design/icons": "^5.5.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -32,6 +33,7 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "util-deprecate": "^1.0.2"
